change message template